Refactor code structure for improved readability and maintainability

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@contextHub/admin",
+  "name": "@contexthub/admin",
   "version": "0.1.0",
   "private": true,
   "description": "React administration interface for contextHub (placeholder)",
