--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,27 +1,23 @@
 {
-  "name": "@contexthub/api",
+  "name": "@contexthub/common",
   "version": "0.1.0",
   "private": true,
-  "description": "Fastify back‑end service for contextHub",
-  "main": "src/server.js",
+  "description": "Shared models, types and utilities for contextHub",
+  "main": "src/index.js",
+  "type": "commonjs",
   "scripts": {
-    "dev": "node src/server.js",
     "build": "echo \"No build step yet\"",
     "test": "vitest run --dir src",
     "lint": "eslint . --ext .js,.ts",
     "format": "prettier --write ."
   },
   "dependencies": {
-    "fastify": "^4.22.2",
-    "@fastify/jwt": "^7.2.0",
-    "dotenv": "^16.3.1",
-    "fastify-plugin": "^4.5.1",
-    "@contexthub/common": "workspace:*"
+    "mongoose": "^7.5.0",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-node": "^11.1.0",
     "prettier": "^3.1.0",
     "vitest": "^0.34.4"
   }
