--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
   "scripts": {
     "dev": "turbo dev",
     "dev:api": "turbo dev --filter=@contexthub/api",
-    "dev:admin": "turbo dev --filter=@contexthub/admin", 
+    "dev:admin": "turbo dev --filter=@contexthub/admin",
+    "dev:parallel": "turbo dev --parallel",
     "build": "turbo build",
+    "build:api": "turbo build --filter=@contexthub/api",
+    "build:admin": "turbo build --filter=@contexthub/admin",
     "test": "turbo test",
+    "test:watch": "turbo test:watch",
     "lint": "turbo lint",
+    "lint:fix": "turbo lint -- --fix",
     "format": "turbo format",
-    "clean": "turbo clean"
+    "format:check": "turbo format -- --check",
+    "type-check": "turbo type-check",
+    "clean": "turbo clean",
+    "db:seed": "turbo dev --filter=@contexthub/api -- --seed",
+    "db:migrate": "turbo dev --filter=@contexthub/api -- --migrate"
   },
   "workspaces": [
     "apps/*",
