--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -2,15 +2,38 @@
   "name": "@contexthub/admin",
   "version": "0.1.0",
   "private": true,
-  "description": "React administration interface for contextHub (placeholder)",
+  "description": "React administration interface for contextHub",
+  "type": "module",
   "scripts": {
-    "dev": "echo 'Admin app not yet implemented.'",
-    "build": "echo 'Admin build not yet implemented.'",
-    "test": "echo 'No admin tests yet.'",
-    "lint": "echo 'No admin linting yet.'",
-    "format": "echo 'No admin formatting yet.'",
-    "clean": "rm -rf dist .turbo .next build",
-    "type-check": "echo 'No TypeScript in admin yet.'"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier --write \"src/**/*.{js,jsx}\"",
+    "clean": "rm -rf dist .turbo node_modules"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@contexthub/common": "workspace:*",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
+    "axios": "^1.5.0",
+    "@tanstack/react-query": "^4.35.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "clsx": "^2.0.0",
+    "tailwindcss": "^3.3.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.4",
+    "autoprefixer": "^10.4.15",
+    "eslint": "^8.49.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.29",
+    "prettier": "^3.0.3",
+    "vite": "^4.4.9",
+    "vitest": "^0.34.4"
+  }
 }
