--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,18 +21,20 @@
     "db:migrate": "node scripts/migrate.js"
   },
   "dependencies": {
-    "fastify": "^4.22.2",
+    "@contexthub/common": "workspace:*",
     "@fastify/jwt": "^7.2.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
+    "fastify": "^4.22.2",
     "fastify-plugin": "^4.5.1",
-    "@contexthub/common": "workspace:*"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-node": "^11.1.0",
+    "nodemon": "^3.0.1",
     "prettier": "^3.1.0",
-    "vitest": "^0.34.4",
-    "nodemon": "^3.0.1"
+    "vitest": "^0.34.4"
   }
 }
