--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "packageManager": "pnpm@10.13.1",
-  "description": "Multi‑tenant headless CMS and content services platform.",
+  "description": "Multi\u2011tenant headless CMS and content services platform.",
   "license": "MIT",
   "scripts": {
     "dev": "turbo dev",
@@ -32,6 +32,13 @@
     "node": ">=18.0.0"
   },
   "devDependencies": {
-    "turbo": "^2.5.6"
+    "turbo": "^2.5.6",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "prettier": "^3.1.0",
+    "vitest": "^0.34.4"
   }
 }
