feat(api): update authentication and tenant management features
- Refactor authentication routes to use the new AuthService.
- Enhance login response to include memberships and active membership details.
- Add CORS support in the Fastify server configuration.
- Introduce tenant management routes for creating and listing tenants.
- Implement tenant creation logic with unique slug generation.
- Update Membership model to include status and timestamps for invitations.
- Add tenant selection UI in the admin panel for user experience improvement.
- Seed script now initializes a default tenant and admin user.
- Update User model to include first and last name fields.
- Improve error handling and response structures across the API.

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,7 +2,7 @@
   "name": "@contexthub/api",
   "version": "0.1.0",
   "private": true,
-  "description": "Fastify back\u2011end service for contextHub",
+  "description": "Fastify back‑end service for contextHub",
   "main": "src/server.js",
   "scripts": {
     "dev": "node src/server.js",
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@contexthub/common": "workspace:*",
+    "@fastify/cors": "^8.5.0",
     "@fastify/jwt": "^7.2.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
