--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -24,11 +24,14 @@
     "@contexthub/common": "workspace:*",
     "@fastify/cors": "^8.5.0",
     "@fastify/jwt": "^7.2.0",
+    "@aws-sdk/client-s3": "^3.515.0",
+    "@aws-sdk/s3-request-presigner": "^3.515.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "fastify": "^4.22.2",
     "fastify-plugin": "^4.5.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
