--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -23,7 +23,16 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "clsx": "^2.0.0",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "lexical": "^0.15.0",
+    "@lexical/react": "^0.15.0",
+    "@lexical/html": "^0.15.0",
+    "@lexical/list": "^0.15.0",
+    "@lexical/rich-text": "^0.15.0",
+    "@lexical/code": "^0.15.0",
+    "@lexical/history": "^0.15.0",
+    "@lexical/link": "^0.15.0",
+    "@lexical/markdown": "^0.15.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.4",
