--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,6 +31,7 @@
     "fastify": "^4.22.2",
     "fastify-plugin": "^4.5.1",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.7",
     "sharp": "^0.33.2"
   },
   "devDependencies": {
