--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -15,24 +15,28 @@
   },
   "dependencies": {
     "@contexthub/common": "workspace:*",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "axios": "^1.5.0",
-    "@tanstack/react-query": "^4.35.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "clsx": "^2.0.0",
-    "tailwindcss": "^3.3.0",
-    "lexical": "^0.15.0",
-    "@lexical/react": "^0.15.0",
-    "@lexical/html": "^0.15.0",
-    "@lexical/list": "^0.15.0",
-    "@lexical/rich-text": "^0.15.0",
     "@lexical/code": "^0.15.0",
     "@lexical/history": "^0.15.0",
+    "@lexical/html": "^0.15.0",
     "@lexical/link": "^0.15.0",
-    "@lexical/markdown": "^0.15.0"
+    "@lexical/list": "^0.15.0",
+    "@lexical/markdown": "^0.15.0",
+    "@lexical/react": "^0.15.0",
+    "@lexical/rich-text": "^0.15.0",
+    "@tanstack/react-query": "^4.35.0",
+    "axios": "^1.5.0",
+    "clsx": "^2.0.0",
+    "lexical": "^0.15.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.64.0",
+    "react-router-dom": "^6.15.0",
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.4",
