--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,18 +21,20 @@
     "db:migrate": "node scripts/migrate.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.515.0",
+    "@aws-sdk/s3-request-presigner": "^3.515.0",
     "@contexthub/common": "workspace:*",
     "@fastify/cors": "^8.5.0",
     "@fastify/jwt": "^7.2.0",
-    "@aws-sdk/client-s3": "^3.515.0",
-    "@aws-sdk/s3-request-presigner": "^3.515.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "fastify": "^4.22.2",
     "fastify-plugin": "^4.5.1",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.7",
-    "sharp": "^0.33.2"
+    "sharp": "^0.33.2",
+    "uuid": "^13.0.0",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
