feat: Initialize promo-sdk with core functionality
- Added package.json for @contexthub/promo-sdk with build and dev scripts.
- Implemented rollup.config.js for module bundling.
- Created FrequencyManager for handling frequency capping using localStorage.
- Developed PlacementHost component for rendering placement content based on UI variant.
- Introduced usePlacement hook for managing placement logic and event tracking.
- Built ContextHubPlacement class for vanilla JS API to fetch and render placements.
- Established tracking utilities for client-side event tracking with batching and offline queue.

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -19,7 +19,8 @@
     "db:indexes": "node -e \"require('./src/database').createIndexes().then(() => console.log('Indexes created'))\""
   },
   "dependencies": {
-    "mongoose": "^7.5.0",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "micromatch": "^4.0.8",
+    "mongoose": "^7.5.0"
   }
 }
