--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -31,10 +31,13 @@
     "@tanstack/react-query": "^4.35.0",
     "axios": "^1.5.0",
     "clsx": "^2.0.0",
+    "i18next": "^25.5.3",
     "lexical": "^0.15.0",
+    "lucide-react": "^0.544.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.64.0",
+    "react-i18next": "^16.0.0",
     "react-router-dom": "^6.15.0",
     "tailwindcss": "^3.3.0"
   },
