--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,7 +18,9 @@
     "clean": "rm -rf dist .turbo",
     "type-check": "echo \"No TypeScript in API yet\"",
     "db:seed": "node scripts/seed.js",
-    "db:migrate": "node scripts/migrate.js"
+    "db:migrate": "node scripts/migrate.js",
+    "db:seed-plans": "node src/scripts/seedSubscriptionPlans.js",
+    "db:seed-flags": "node src/scripts/seedFeatureFlags.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.515.0",
@@ -33,6 +35,7 @@
     "fastify-plugin": "^4.5.1",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.7",
+    "redis": "^5.8.3",
     "sharp": "^0.33.2",
     "uuid": "^13.0.0",
     "zod": "^4.1.11"
