--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,12 +28,15 @@
     "@contexthub/common": "workspace:*",
     "@fastify/cors": "^8.5.0",
     "@fastify/jwt": "^7.2.0",
+    "@fastify/swagger": "^8.15.0",
+    "@fastify/swagger-ui": "^4.2.0",
     "@upstash/redis": "^1.35.5",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "fastify": "^4.22.2",
     "fastify-plugin": "^4.5.1",
     "jsonwebtoken": "^9.0.2",
+    "marked": "^16.4.1",
     "nodemailer": "^6.9.7",
     "redis": "^5.8.3",
     "sharp": "^0.33.2",
