feat(upstash): Add Upstash Redis configuration and logging enhancements feat(content-editor): Implement JSON and HTML render mode toggle fix(contentService): Remove unnecessary console logs in getArchiveStatistics

--- a/.env.example
+++ b/.env.example
@@ -15,4 +15,16 @@ R2_ACCESS_KEY=your-access-key
 R2_SECRET_KEY=your-secret-key
 R2_BUCKET=my-bucket
 
+# Upstash Redis logging configuration
+UPSTASH_TOKEN=replace-with-token
+UPSTASH_ENDPOINT=https://your-workspace.upstash.io
+# Optional tuning (defaults shown)
+# UPSTASH_CONNECT_TIMEOUT_MS=20000
+# UPSTASH_RETRY_ATTEMPTS=3
+# UPSTASH_RETRY_DELAY_MS=250
+# UPSTASH_RETRY_MAX_DELAY_MS=4000
+# UPSTASH_MAX_FAILURES=5
+# UPSTASH_FAILURE_COOLDOWN_MS=300000
+# UPSTASH_VERBOSE_LOGGING=false
+
 # Other configuration values will be added as new modules are implemented.
