--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -40,6 +40,7 @@
     "nodemailer": "^6.9.7",
     "redis": "^5.8.3",
     "sharp": "^0.33.2",
+    "undici": "^6.20.1",
     "uuid": "^13.0.0",
     "zod": "^4.1.11"
   },
