--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,15 @@ PORT=3000
 # Secret used to sign JWT tokens.  Use a long, random string in production.
 JWT_SECRET=your-jwt-secret
 
-# MongoDB connection string (to be implemented in later phases)
-MONGO_URI=mongodb://localhost:27017/contextHub
+# MongoDB connection string + pool configuration
+MONGODB_URI=mongodb://localhost:27017/contextHub
+# Optional tuning (defaults shown)
+# MONGODB_MAX_POOL_SIZE=50
+# MONGODB_MIN_POOL_SIZE=5
+# MONGODB_MAX_IDLE_TIME_MS=30000
+# MONGODB_SERVER_SELECTION_TIMEOUT_MS=8000
+# MONGODB_SOCKET_TIMEOUT_MS=30000
+# MONGODB_WAIT_QUEUE_TIMEOUT_MS=2000
 
 # Cloudflare R2 access key and secret (for media storage)
 R2_ACCESS_KEY=your-access-key
