feat(upstash): Add UPSTASH_REALTIME_ENABLED configuration for controlling real-time logging

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,8 @@ R2_SECRET_KEY=your-secret-key
 R2_BUCKET=my-bucket
 
 # Upstash Redis logging configuration
+# Set to false to keep runtime off while retaining credentials for later use
+UPSTASH_REALTIME_ENABLED=true
 UPSTASH_TOKEN=replace-with-token
 UPSTASH_ENDPOINT=https://your-workspace.upstash.io
 # Optional tuning (defaults shown)
