feat(database): Add automatic index creation option and related scripts

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,8 @@ MONGODB_URI=mongodb://localhost:27017/contextHub
 # MONGODB_SERVER_SELECTION_TIMEOUT_MS=8000
 # MONGODB_SOCKET_TIMEOUT_MS=30000
 # MONGODB_WAIT_QUEUE_TIMEOUT_MS=2000
+# Automatically create indexes on every server start (defaults to false in production)
+# MONGODB_AUTO_CREATE_INDEXES=false
 
 # Cloudflare R2 access key and secret (for media storage)
 R2_ACCESS_KEY=your-access-key
