feat: Implement webhook management and processing
- Added cron job for processing webhooks and scheduled content publishing.
- Created routes for managing webhooks including listing, creating, updating, and deleting.
- Implemented webhook service for handling webhook logic, including sending test webhooks and triggering webhooks for tenants.
- Introduced domain event types and models for webhooks and webhook outbox jobs.
- Added tests for webhook service functionality.

--- a/.env.example
+++ b/.env.example
@@ -38,4 +38,17 @@ UPSTASH_ENDPOINT=https://your-workspace.upstash.io
 # UPSTASH_FAILURE_COOLDOWN_MS=300000
 # UPSTASH_VERBOSE_LOGGING=false
 
+# Webhook dispatcher & scheduler controls
+WEBHOOK_DISPATCH_LIMIT=50
+WEBHOOK_DISPATCH_INTERVAL_MS=5000
+DOMAIN_EVENT_BATCH_LIMIT=100
+WEBHOOK_MAX_RETRY_ATTEMPTS=5
+WEBHOOK_RETRY_BACKOFF_MS=60000
+WEBHOOK_FAILED_CLEANUP_MS=604800000 # 7 days
+SCHEDULED_PUBLISH_LIMIT=50
+
+# Cron endpoint secret (for /api/cron/webhooks)
+# Generate a strong random token: openssl rand -hex 32
+CRON_SECRET_TOKEN=your-secret-token-here
+
 # Other configuration values will be added as new modules are implemented.
