feat(mailService): add tenant access removed notification email functionality
feat(roleService): enhance role creation with error handling for duplicates

feat(userService): update user detachment logic to send notification email and prevent owner role detachment

docs(API-TOKEN-USAGE): add monthly request limit exceeded response example and cron job instructions

feat(apiUsage): implement API usage tracking with Redis and MongoDB synchronization

feat(ApiUsageSyncState): create model for tracking API usage sync state

feat(FormDefinition): add email notification settings to form definitions

feat(Role): enable tenant enforcement for role schema

feat(Tenant): implement usage limit checks for tenants

feat(User): add mustChangePassword flag to user schema

feat(rbac): expand permissions and introduce implied permissions management

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,8 @@ R2_BUCKET=my-bucket
 UPSTASH_REALTIME_ENABLED=true
 UPSTASH_TOKEN=replace-with-token
 UPSTASH_ENDPOINT=https://your-workspace.upstash.io
+# API usage counters (choose provider)
+API_USAGE_REDIS_PROVIDER=upstash
 # Optional tuning (defaults shown)
 # UPSTASH_CONNECT_TIMEOUT_MS=20000
 # UPSTASH_RETRY_ATTEMPTS=3
